// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeroBanner /> should render maximal 1`] = `
.c2 {
  font-family: "Krana Fat";
  font-size: 3.75rem;
  line-height: 1;
}

.c3 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-weight: 700;
}

.c5 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c1 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.c6 {
  flex: 1;
  display: flex;
  position: relative;
  overflow: hidden;
}

.c7 {
  margin-top: auto;
  right: -5rem;
  bottom: 0;
}

.c0 {
  background: rgb(0, 98, 114);
  height: 100vh;
  grid-column: 1/-1;
  padding-top: 3.75rem;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

@media (min-width: 1200px) {
  .c2 {
    font-size: 6rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c1 {
    width: 50%;
    gap: 3rem;
    padding: 3.75rem;
    align-items: flex-start;
    justify-content: center;
  }

  .c1 .c4 {
    margin-top: 3rem;
  }
}

@media (min-width: 1200px) {
  .c6 {
    width: 50%;
    overflow: visible;
  }
}

@media (min-width: 1200px) {
  .c6 {
    background-image: linear-gradient(rgba(0, 98, 114, 0.7), rgba(0, 98, 114, 0.7)),url(https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg);
    background-size: cover;
  }
}

@media (min-width: 1200px) {
  .c7 {
    position: absolute!important;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
    flex-direction: row-reverse;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      class="c2"
    >
      Test Title
    </h1>
    <p
      class="c3"
    >
      Sub test sub title
    </p>
    <h2
      class="c4 c5"
    >
      Secondary test secondary title
    </h2>
  </div>
  <div
    class="c6"
  >
    <div
      class="gatsby-image-wrapper gatsby-image-wrapper-constrained c7"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
    >
      <div
        style="max-width: 4032px; display: block;"
      >
        <img
          alt=""
          aria-hidden="true"
          role="presentation"
          src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='1728'%20width='4032'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
          style="max-width: 100%; display: block; position: static;"
        />
      </div>
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEBLAEsAAD/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wAARCAAJABQDAREAAhEBAxEB/8QAFQABAQAAAAAAAAAAAAAAAAAABQT/xAAiEAACAQIGAwEAAAAAAAAAAAABAhEAAwQFEhMxcTI1QXL/xAAYAQEAAwEAAAAAAAAAAAAAAAADAAIEAf/EABsRAQACAwEBAAAAAAAAAAAAAAABAgMRMSES/9oADAMBAAIRAxEAPwA6zlpYFt6BMERxQ7X+TOZ4BsFhVu7qvpUK2lYHdTLTUbHb3kASzIYVWjn6aBWfV9vxPVLLQQz71dj8iu5OQO/Atrg91msN/9k="
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&q=50&fm=webp 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&q=50&fm=webp 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&q=50&fm=webp 4000w"
          sizes="(min-width: 4032px) 4032px, 100vw"
          type="image/webp"
        />
        <img
          alt="Kuva Lauri Lavannista, taustalla näkyy metsää"
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg"
          data-srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&fl=progressive&q=50&fm=jpg 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&fl=progressive&q=50&fm=jpg 4000w"
          decoding="async"
          loading="lazy"
          sizes="(min-width: 4032px) 4032px, 100vw"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
      </script>
    </div>
  </div>
</div>
`;

exports[`<HeroBanner /> should render minimal 1`] = `
.c2 {
  font-family: "Krana Fat";
  font-size: 3.75rem;
  line-height: 1;
}

.c1 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.c3 {
  flex: 1;
  display: flex;
  position: relative;
  overflow: hidden;
}

.c0 {
  background: rgb(0, 98, 114);
  height: 100vh;
  grid-column: 1/-1;
  padding-top: 3.75rem;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

@media (min-width: 1200px) {
  .c2 {
    font-size: 6rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c1 {
    width: 50%;
    gap: 3rem;
    padding: 3.75rem;
    align-items: flex-start;
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c3 {
    width: 50%;
    overflow: visible;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
    flex-direction: row-reverse;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      class="c2"
    >
      Test Title
    </h1>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`<HeroBanner /> should render minimal with borken image data 1`] = `
.c2 {
  font-family: "Krana Fat";
  font-size: 3.75rem;
  line-height: 1;
}

.c1 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.c3 {
  flex: 1;
  display: flex;
  position: relative;
  overflow: hidden;
}

.c0 {
  background: rgb(0, 98, 114);
  height: 100vh;
  grid-column: 1/-1;
  padding-top: 3.75rem;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

@media (min-width: 1200px) {
  .c2 {
    font-size: 6rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c1 {
    width: 50%;
    gap: 3rem;
    padding: 3.75rem;
    align-items: flex-start;
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c3 {
    width: 50%;
    overflow: visible;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
    flex-direction: row-reverse;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      class="c2"
    >
      Test Title
    </h1>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`<HeroBanner /> should render minimal with image with no image alt 1`] = `
.c2 {
  font-family: "Krana Fat";
  font-size: 3.75rem;
  line-height: 1;
}

.c1 {
  color: rgb(248, 207, 169);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.c3 {
  flex: 1;
  display: flex;
  position: relative;
  overflow: hidden;
}

.c4 {
  margin-top: auto;
  right: -5rem;
  bottom: 0;
}

.c0 {
  background: rgb(0, 98, 114);
  height: 100vh;
  grid-column: 1/-1;
  padding-top: 3.75rem;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

@media (min-width: 1200px) {
  .c2 {
    font-size: 6rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c1 {
    width: 50%;
    gap: 3rem;
    padding: 3.75rem;
    align-items: flex-start;
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c3 {
    width: 50%;
    overflow: visible;
  }
}

@media (min-width: 1200px) {
  .c4 {
    position: absolute!important;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
    flex-direction: row-reverse;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      class="c2"
    >
      Test Title
    </h1>
  </div>
  <div
    class="c3"
  >
    <div
      class="gatsby-image-wrapper gatsby-image-wrapper-constrained c4"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
    >
      <div
        style="max-width: 4032px; display: block;"
      >
        <img
          alt=""
          aria-hidden="true"
          role="presentation"
          src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='1728'%20width='4032'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
          style="max-width: 100%; display: block; position: static;"
        />
      </div>
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEBLAEsAAD/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wAARCAAJABQDAREAAhEBAxEB/8QAFQABAQAAAAAAAAAAAAAAAAAABQT/xAAiEAACAQIGAwEAAAAAAAAAAAABAhEAAwQFEhMxcTI1QXL/xAAYAQEAAwEAAAAAAAAAAAAAAAADAAIEAf/EABsRAQACAwEBAAAAAAAAAAAAAAABAgMRMSES/9oADAMBAAIRAxEAPwA6zlpYFt6BMERxQ7X+TOZ4BsFhVu7qvpUK2lYHdTLTUbHb3kASzIYVWjn6aBWfV9vxPVLLQQz71dj8iu5OQO/Atrg91msN/9k="
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&q=50&fm=webp 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&q=50&fm=webp 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&q=50&fm=webp 4000w"
          sizes="(min-width: 4032px) 4032px, 100vw"
          type="image/webp"
        />
        <img
          alt=""
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg"
          data-srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&fl=progressive&q=50&fm=jpg 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&fl=progressive&q=50&fm=jpg 4000w"
          decoding="async"
          loading="lazy"
          sizes="(min-width: 4032px) 4032px, 100vw"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
      </script>
    </div>
  </div>
</div>
`;
